[gd_scene load_steps=15 format=2]

[ext_resource path="res://bg-1.tres" type="Environment" id=1]
[ext_resource path="res://ui/Theme-1.png" type="Texture" id=2]
[ext_resource path="res://scripts/Theme.gd" type="Script" id=3]
[ext_resource path="res://font/Poppins-Light.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ui/Selected.png" type="Texture" id=5]
[ext_resource path="res://ui/Theme-4.png" type="Texture" id=6]
[ext_resource path="res://ui/Theme-0.png" type="Texture" id=7]
[ext_resource path="res://ui/Theme-6.png" type="Texture" id=8]
[ext_resource path="res://ui/Theme-5.png" type="Texture" id=9]
[ext_resource path="res://ui/Theme-2.png" type="Texture" id=10]
[ext_resource path="res://ui/Theme-7.png" type="Texture" id=11]
[ext_resource path="res://ui/Theme-3.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="."]
environment = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Theme-0" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -220.0
margin_right = -20.0
margin_bottom = -120.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/Theme-0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selected" type="TextureRect" parent="Control/Theme-0"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -15.0
margin_right = 22.5
margin_bottom = 25.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Theme-2" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -90.0
margin_right = -20.0
margin_bottom = 10.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/Theme-2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selected" type="TextureRect" parent="Control/Theme-2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -15.0
margin_right = 22.5
margin_bottom = 25.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Theme-4" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 40.0
margin_right = -20.0
margin_bottom = 140.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/Theme-4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selected" type="TextureRect" parent="Control/Theme-4"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -15.0
margin_right = 22.5
margin_bottom = 25.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Theme-6" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 170.0
margin_right = -20.0
margin_bottom = 270.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/Theme-6"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selected" type="TextureRect" parent="Control/Theme-6"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -15.0
margin_right = 22.5
margin_bottom = 25.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Theme-1" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -220.0
margin_right = 120.0
margin_bottom = -120.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/Theme-1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selected" type="TextureRect" parent="Control/Theme-1"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -15.0
margin_right = 22.5
margin_bottom = 25.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Theme-3" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -90.0
margin_right = 120.0
margin_bottom = 10.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/Theme-3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selected" type="TextureRect" parent="Control/Theme-3"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -15.0
margin_right = 22.5
margin_bottom = 25.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Theme-5" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 40.0
margin_right = 120.0
margin_bottom = 140.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/Theme-5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selected" type="TextureRect" parent="Control/Theme-5"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -15.0
margin_right = 22.5
margin_bottom = 25.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Theme-7" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 170.0
margin_right = 120.0
margin_bottom = 270.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/Theme-7"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selected" type="TextureRect" parent="Control/Theme-7"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -15.0
margin_right = 22.5
margin_bottom = 25.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -122.5
margin_top = -290.0
margin_right = 122.5
margin_bottom = -239.0
custom_fonts/font = SubResource( 2 )
text = "Select Theme"
align = 1
valign = 1

[node name="TopLeft" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="TopLeft"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 80.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="TopLeft/Back"]
pause_mode = 2
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "< Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Control/Theme-0" to="." method="_on_Theme0_button_down"]
[connection signal="button_down" from="Control/Theme-2" to="." method="_on_Theme2_button_down"]
[connection signal="button_down" from="Control/Theme-4" to="." method="_on_Theme4_button_down"]
[connection signal="button_down" from="Control/Theme-6" to="." method="_on_Theme6_button_down"]
[connection signal="button_down" from="Control/Theme-1" to="." method="_on_Theme1_button_down"]
[connection signal="button_down" from="Control/Theme-3" to="." method="_on_Theme3_button_down"]
[connection signal="button_down" from="Control/Theme-5" to="." method="_on_Theme5_button_down"]
[connection signal="button_down" from="Control/Theme-7" to="." method="_on_Theme7_button_down"]
[connection signal="button_down" from="TopLeft/Back" to="." method="_on_Back_button_down"]
